--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,24 @@
+atomicwrites==1.3.0
+attrs==19.1.0
+coverage==4.5.4
 Django==2.2.5
 django-filter==2.2.0
 djangorestframework==3.10.3
+importlib-metadata==0.23
 Markdown==3.1.1
+more-itertools==7.2.0
+packaging==19.2
+pluggy==0.13.0
 psycopg2==2.8.3
+py==1.8.0
+Pygments==2.4.2
+pyparsing==2.4.2
+pytest==5.1.3
+pytest-cov==2.7.1
+pytest-django==3.5.1
 python-dotenv==0.10.3
 pytz==2019.2
+six==1.12.0
 sqlparse==0.3.0
+wcwidth==0.1.7
+zipp==0.6.0
